# flats

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml
benches/: parallel_search.rs  simd.rs
src/: error.rs  lib.rs
src/engine/: mod.rs
src/index/: index.rs  metadata.rs
src/lexer/: lexer.rs  mod.rs
src/metadata/: common.rs  index.rs  mod.rs  tuples.rs
src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs
src/sql/: ast.rs  bind.rs  lexer.rs  mod.rs  parser.rs  plan.rs  planner.rs
src/wal/: wal.rs
tests/: chaos.rs  index.rs  reconciliation.rs  simd_parity.rs  swmr.rs
